k8s/templates/app-template/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: APP_NAME
  labels:
    app.kubernetes.io/name: APP_NAME
